# hierarchal-data

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
hierarchy/: admin.py  forms.py  models.py  views.py
hierarchy/migrations/: 0001_initial.py
templates/: generic.html  index.html
